TMS example code fix

--- a/examples/tilesource-tms/index.html
+++ b/examples/tilesource-tms/index.html
@@ -92,8 +92,8 @@
     </p>
 <pre>
 OpenSeadragon({
-    id:                 "example-inline-configuration-for-tms",
-    prefixUrl:          "/openseadragon/images/",
+    id:                 'example-inline-configuration-for-tms',
+    prefixUrl:          '/openseadragon/images/',
     showNavigator:      false,
     wrapHorizontal:     true,
     zoomPerScroll:      1.2,
