Fixed a typo in the homepage

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         the box and is actively adding support for more.  If the image
         serving protocol you need is not supported, you can always
         add support for yours using a custom tile source. <em>(Please help
-        us add built-in support for your reqiured image serving
+        us add built-in support for your required image serving
         protocol.)</em> Each supported protocol aims to allow configuration
         via XMLHTTPRequest, JSONP, as well as direct inline configuration.
         </p>
