Publishing recent site fixes

--- a/examples/tilesource-iiif/index.html
+++ b/examples/tilesource-iiif/index.html
@@ -74,7 +74,7 @@
     OpenSeadragon has added support for IIIF thanks to several of the
     authors of its specification,
     as well as the <a href='https://gist.github.com/jpstroop/4624253'>gist</a>
-    provided by <a href='http://github.com/jstroop'>Jon Stroop</a>.
+    provided by <a href='http://github.com/jpstroop'>Jon Stroop</a>.
 </p>
 
 
