Doc fixes and new plugin

--- a/index.html
+++ b/index.html
@@ -189,10 +189,11 @@
 
 
 <h2 id='plugins'>Plugins</h2>
-<p>There are currently two plugins available for OpenSeadragon, but more are in the works.</p>
+<p>Plugins can be used to enhance OpenSeadragon. The following plugins are currently available:</p>
 <ul class="square-list">
     <li><a href="https://github.com/NISTDeepZoom/OpenSeadragonScalebar">OpenSeadragonScalebar</a> displays your image's scale in real-world measurements.</li>
-    <li><a href="https://github.com/msalsbery/openseadragonimaginghelper">OpenSeadragonImagingHelper</a> provides coordinate conversion, pan, and zoom methods in a simplified coordinate system.</li>
+    <li><a href="https://github.com/msalsbery/OpenSeadragonImagingHelper">OpenSeadragonImagingHelper</a> provides coordinate conversion, pan, and zoom methods in a simplified coordinate system.</li>
+    <li><a href="https://github.com/msalsbery/OpenSeadragonViewerInputHook">OpenSeadragonViewerInputHook</a> provides hooks into an OpenSeadragon.Viewer and/or OpenSeadragon.MouseTracker for overriding/extending the default user-input event handling behavior.</li>
 </ul>
 
 
