Another IIIF fix

--- a/examples/tilesource-iiif/index.html
+++ b/examples/tilesource-iiif/index.html
@@ -96,7 +96,6 @@
     <p>
         In this example we also specified the <code>preserveViewport</code> option to retain the 
         viewport zoom and position when changing pages.
-
     </p>
     <p>
        In order to make this feel a little more like a basic book turner, we are
@@ -184,8 +183,10 @@ OpenSeadragon({
 
 <div class="description">
     <h3>XMLHTTPRequest for IIIF info.json</h3>
-    <p>Note: The following examples follows the IIIF Image API specification 
-        version 1.1. The older 1.0 XML and JSON syntaxes are also supported. 
+    <p>Note: The following example follows the <a href='http://www-sul.stanford.edu/iiif/image-api/1.1/'>IIIF Image API 
+    specification version 1.1</a>. The older 1.0 XML and JSON syntaxes are also 
+    supported. Also note that the Image Server will need to support <a href="http://www.w3.org/TR/cors/">cross-origin 
+    resource sharing</a> in order for this to work across different domains.
     </p>
 </div>
 <div class="demoarea">
