New Getting Started and Creating Zooming Images

--- a/examples/tilesource-zoomit/index.html
+++ b/examples/tilesource-zoomit/index.html
@@ -41,9 +41,7 @@
                 <li><a href='/#plugins'
                     >Plugins</a></li>
                 <li><a href='/#download'
-                    >Download</a></li>
-                <li><a href='/#installing'
-                    >Installing</a></li>
+                    >Download &amp; Install</a></li>
                 <li><a href='/docs/'
                     >API Documentation</a></li>
                 <li><a href='/#support'
@@ -67,7 +65,16 @@
     OpenSeadragon can render the DZI tiles and provide you all the features
     you can only get with OpenSeadragon.
 </p>
-
+<p>
+    To get started:
+</p>
+<ol class="for-examples">
+    <li>Post your source image online somewhere.</li>
+    <li>Paste its URL into <a href="http://zoom.it">http://zoom.it</a>.</li>
+    <li>You can then get the info you need about the resulting image by going to<br><tt>http://api.zoom.it/v1/content/?url=&lt;YOUR_IMAGE_URL&gt;</tt>.</li>
+    <li>See below for how to format that information for OpenSeadragon.</li>
+</ol>
+<p>For more advanced use, see the <a href="http://zoom.it/pages/api/">Zoom.it API</a>.</p>
 
 <div class="description">
     <h3>Pulling Tiles From Zoom.it</h3>
@@ -168,9 +175,7 @@ OpenSeadragon({
             <li><a href='/#plugins'
                 >Plugins</a></li>
             <li><a href='/#download'
-                >Download</a></li>
-            <li><a href='/#installing'
-                >Installing</a></li>
+                >Download &amp; Install</a></li>
             <li><a href='/docs/'
                 >API Documentation</a></li>
             <li><a href='/#support'
