--- a/examples/tilesource-legacy/index.html
+++ b/examples/tilesource-legacy/index.html
@@ -41,9 +41,7 @@
                 <li><a href='/#plugins'
                     >Plugins</a></li>
                 <li><a href='/#download'
-                    >Download</a></li>
-                <li><a href='/#installing'
-                    >Installing</a></li>
+                    >Download &amp; Install</a></li>
                 <li><a href='/docs/'
                     >API Documentation</a></li>
                 <li><a href='/#support'
@@ -323,9 +321,7 @@ OpenSeadragon({
             <li><a href='/#plugins'
                 >Plugins</a></li>
             <li><a href='/#download'
-                >Download</a></li>
-            <li><a href='/#installing'
-                >Installing</a></li>
+                >Download &amp; Install</a></li>
             <li><a href='/docs/'
                 >API Documentation</a></li>
             <li><a href='/#support'
