--- a/examples/ui-zoom-and-pan/index.html
+++ b/examples/ui-zoom-and-pan/index.html
@@ -41,9 +41,7 @@
                 <li><a href='/#plugins'
                     >Plugins</a></li>
                 <li><a href='/#download'
-                    >Download</a></li>
-                <li><a href='/#installing'
-                    >Installing</a></li>
+                    >Download &amp; Install</a></li>
                 <li><a href='/docs/'
                     >API Documentation</a></li>
                 <li><a href='/#support'
@@ -189,9 +187,7 @@ maximum zoom range as well as the range of panning.
             <li><a href='/#plugins'
                 >Plugins</a></li>
             <li><a href='/#download'
-                >Download</a></li>
-            <li><a href='/#installing'
-                >Installing</a></li>
+                >Download &amp; Install</a></li>
             <li><a href='/docs/'
                 >API Documentation</a></li>
             <li><a href='/#support'
