--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -99,6 +99,14 @@
         <td>service, under construction</td> 
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
+    <tr>
+        <td><a href="http://kakadusoftware.com">Kakadu</a></td>
+        <td>C++ library to encode or decode JPEG 2000 images.<br/>
+        Example of a batch convert script : <a href="https://github.com/DDMAL/diva.js/blob/master/source/processing/process_jp2.py">process_jp2.py</a> (Diva.js project)</td> 
+        <td><a href="/examples/tilesource-iiif/">IIIF</a>
+            (requires a IIIF-compliant image server with JPEG 2000 support)
+        </td>
+    </tr>
 </table>
 
 
