Added Perl utility

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -75,6 +75,11 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
+        <td><a href="http://search.cpan.org/~drrho/Graphics-DZI-0.05/script/deepzoom">deepzoom</a></td>
+        <td>Perl utility</td> 
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
+    <tr>
         <td><a href="http://www.maptiler.org/">Map Tiler</a></td>
         <td>desktop app for Windows, Mac, Linux</td> 
         <td><a href="/examples/tilesource-tms/">TMS</a></td>
