--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <a href="https://github.com/openseadragon/openseadragon/releases/download/v1.1.1/openseadragon-bin-1.1.1.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
+        <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
                 1.1.1
             </span>
             <span class="tagline">
-                Try it on the iPad! (new since 0.9)
             </span>
         </h1>
 
@@ -56,8 +56,7 @@
         <h2>OpenSeadragon</h2>
 
 <div class="elevator">
-    An open-source, web-based viewer for zoomable images, implemented in pure
-    JavaScript.
+    An open-source, web-based viewer for zoomable images, implemented in pure JavaScript, for desktop and mobile.
 </div>
 
 <div class="demoarea">
@@ -206,6 +205,9 @@
     <a href="https://github.com/openseadragon/openseadragon/releases/download/v1.1.1/openseadragon-bin-1.1.1.tar.gz">tar.gz</a> formats.
 </p>
 <p>
+    You can also use <a href="http://bower.io">Bower</a> to install it: <tt>bower install openseadragon</tt>
+</p>
+<p>
     For installation instructions, see the <a href="/docs/">Getting Started</a> page in the documentation.
 </p>
 <p>
@@ -225,7 +227,8 @@
 <h2 id='support'>Support</h2>
 <p>GitHub: <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a></p>
 <p>Twitter: <a href="https://twitter.com/openseadragon">@OpenSeadragon</a></p>
-<p>IRC: #openseadragon on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>)</p>
+<p>Chat: <a href="https://gitter.im/openseadragon/openseadragon">Gitter</a> (also accessible via <a href="https://irc.gitter.im/">IRC</a>)</p>
+<!-- <p>IRC: #openseadragon on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>)</p> -->
 
 
 <h2 id='development'>Development</h2>
