Publishing site-build #60

--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
             <li><a href='/examples/ui-keyboard-navigation/'>
                 <span>Keyboard Navigation</span>
             </a></li>
-        </ul>
+            <li><a href='/examples/ui-customize-tooltips/'>
+                <span>Customize Tooltips (I18n)</span>
+            </a></li>
+         </ul>
     </li>
 
     <li>
