Deprecating Zoom.it docs

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -56,7 +56,7 @@
         <h2>Creating Zooming Images</h2>
 
 <p>OpenSeadragon works with a <a href="/#examples-and-features">variety of zooming image formats</a>. These zooming images generally consist of a number of individual tiles, organized so they can be accessed as needed. If you have a large image you'd like to zoom, you'll need to convert it first. There are a number of conversion options depending on your needs.</p>
-<p>Probably the easiest is to use <a href="http://zoom.it">Zoom.it</a>; see our <a href="/examples/tilesource-zoomit/">Zoom.it instructions</a>.</p>
+<!-- <p>Probably the easiest is to use <a href="http://zoom.it">Zoom.it</a>; see our <a href="/examples/tilesource-zoomit/">Zoom.it instructions</a>.</p> -->
 <p>Other tools include:</p>
 <table class="for-examples">
     <tr>
