--- a/examples/tilesource-zoomit/index.html
+++ b/examples/tilesource-zoomit/index.html
@@ -56,6 +56,7 @@
         <h2>
     example: integrating with zoom.it tiles
 </h2>
+<p><strong>Note: Zoom.it is not currently accepting new images, though hopefully it will in the future.</strong></p>
 <p>
     <a href="http://zoom.it">Zoom.it</a> provides a simple service-based way
     of loading images and serving tiles.  The Zoom.it service is based on the
