--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             <li><a href='/examples/tilesource-custom/'>
                 <span>Custom Tile Sources</span>
             </a></li>
-            <li><a href='/examples/tilesource-zoomit/'>
+            <!-- <li><a href='/examples/tilesource-zoomit/'>
                 <span>Pulling from Zoom.it</span>
-            </a></li>
+            </a></li> -->
         </ul>
     </li>
 
