Publishing Duomo addition

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         OpenSeadragon Viewer With Default Settings
         <span id='consolelog'></span>
     </div>
-    <div id="contentDiv" class="openseadragon"></div>
+    <div id="contentDiv" class="openseadragon front-page"></div>
+    <div class="image-credit">Image &copy; 2012, <a href="https://www.flickr.com/photos/projectese/" target="_blank">Dario Morelli</a></div>
 </div>
 
 <script type="text/javascript">
@@ -72,10 +73,9 @@
     OpenSeadragon({
         id:              "contentDiv",
         prefixUrl:       "/openseadragon/images/",
-        tileSources:     "/example-images/highsmith/highsmith.dzi"
+        tileSources:     "/example-images/duomo/duomo.dzi"
     });
 </script>
-
 
 <h2 id='examples-and-features'>
     Examples &amp; Features
