Publishing https://github.com/openseadragon/site-build/pull/68

--- a/examples/ui-keyboard-navigation/index.html
+++ b/examples/ui-keyboard-navigation/index.html
@@ -83,7 +83,7 @@
     <li><strong>[ w, up arrow ]</strong> - move viewport <strong>up</strong></li>
     <li><strong>[ s, down arrow ]</strong> - move viewport <strong>down</strong></li>
     <li><strong>[ a, left arrow ]</strong> - move viewport <strong>left</strong></li>
-    <li><strong>[ f, right arrow ]</strong> - move viewport <strong>right</strong></li>
+    <li><strong>[ d, right arrow ]</strong> - move viewport <strong>right</strong></li>
     <li><strong>[ 0 ]</strong> - zoom / move viewport <strong>home</strong></li>
     <li><strong>[ - / _, shift+W, shift+up arrow ]</strong> - zoom viewport <strong>out</strong></li>
     <li><strong>[ = / +, shift+S, shift+down arrow ]</strong> - zoom viewport <strong>in</strong></li>
