Publishing site-build #69

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -80,6 +80,16 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
+        <td><a href="https://github.com/nfabre/deepzoom.php">PHP Deep Zoom Tools</a></td>
+        <td>PHP</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
+    <tr>
+        <td><a href="https://github.com/dblock/dzt">DZT</a></td>
+        <td>An image slicing library and tool written in Ruby</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
+    <tr>
         <td><a href="http://www.maptiler.org/">MapTiler</a></td>
         <td>desktop app for Windows, Mac, Linux</td>
         <td><a href="/examples/tilesource-tms/">TMS</a></td>
@@ -100,11 +110,16 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
+        <td><a href="http://zoomable.ca/">Zoomable</a></td>
+        <td>service, offers embeds; no explicit API</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
+    <tr>
         <td><a href="https://github.com/zoomhub/zoomhub">ZoomHub</a></td>
         <td>service, under construction</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
-        <tr>
+    <tr>
         <td><a href="http://kakadusoftware.com">Kakadu</a></td>
         <td>
             C++ library to encode or decode JPEG 2000 images
@@ -114,11 +129,6 @@
         <td>
             <a href="/examples/tilesource-iiif/">IIIF</a> (requires a IIIF-compliant image server with JPEG 2000 support, like <a href="https://github.com/pulibrary/loris">Loris</a>; see also <a href="http://iiif.io">iiif.io</a> for more details)
         </td>
-    </tr>
-    <tr>
-        <td><a href="https://github.com/dblock/dzt">DZT</a></td>
-        <td>An image slicing library and tool written in Ruby</td>
-        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
 </table>
 
