Publishing "In the wild"

--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
     });
 </script>
 
+<p>See how people are using <a href="/examples/in-the-wild/">OpenSeadragon in the wild</a>.</p>
+
 <h2 id='examples-and-features'>
     Examples &amp; Features
 </h2>
-
 <ul>
     <li>
         <h3>Supported Tile Sources</h3>
