Adding Arkyves to In the wild

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -73,6 +73,7 @@
 </ul>
 <h4>History</h4>
 <ul class="square-list">
+    <li><a href="http://arkyves.org/view/essay0014/">Arkyves</a></li>
     <li>
         <a href="http://deepzoomchattanooga.com/">Deep Zoom Chattanooga</a>
         <ul>
