--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -148,6 +148,12 @@
             <li>e.g. <a href="https://digital.library.yorku.ca/yul-100447/cne-sports">Waterskiing in a pyramid formation, 1970</a></li>
         </ul>
     </li>
+    <li>
+        <a href="http://gallicalabs.bnf.fr">Gallica Labs, forthcoming version of the BnF's digital library (Bibliothèque nationale de France)</a>
+        <ul>
+            <li>e.g. <a href="http://gallicalabs.bnf.fr/ark:/12148/btv1b8571085n/f15.zoom">Heures à l'usage de Paris [Heures de Jeanne de France]</a></li>
+        </ul>
+    </li>
 </ul>
 <h4>Mapping</h4>
 <ul class="square-list">
@@ -182,7 +188,7 @@
 <h4>Tools</h4>
 <ul class="square-list">
     <li><a href="http://annotorious.github.io/demos/openseadragon-preview.html">Annotorious</a></li>
-    <li><a href="https://github.com/IIIF/mirador">Mirador</a> (<a href="http://sul-reader-test.stanford.edu/mirador/">demo</a>)</li>
+    <li><a href="http://projectmirador.org">Mirador</a> (<a href="http://projectmirador.org/demo/">demo</a> - <a href="https://github.com/IIIF/mirador">Github</a>)</li>
     <li><a href="http://mosaically.com/">Mosaically</a></li>
     <li><a href="http://openslide.org/">OpenSlide</a> (<a href="http://openslide.org/demo/">demo</a>)</li>
     <li><a href="https://photosynth.net/preview/">Photosynth 3rd Generation</a></li>
