--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -184,6 +184,8 @@
     <li><a href="http://beehivecollective.org/posterViewer/?poster=mr">Mesoam&eacute;rica Resiste, Beehive Design Collective</a></li>
     <li><a href="http://twittercensus.se/graph2014/graphwalk14.php">Swedish Twitter Census, 2014</a></li>
     <li><a href="http://dump.ventero.de/xkcd1110/open.html">xkcd #1110 remixed with OpenSeadragon</a></li>
+    <li><a href="http://www.vam.ac.uk/content/articles/i/exhibition-road-drawing-scroll/">
+Victoria and Albert Museum: Exhibition Road drawing scroll</a> (<a href="http://www.vam.ac.uk/blog/digital-media/building-the-deepzoom">more info</a>)</li>
 </ul>
 <h4>Tools</h4>
 <ul class="square-list">
